# V2x

./: Dockerfile  README.md  auto_start.yml
late_fusion_for_yolos_cpp/config/: late_fusion_params.yaml
ros2_yolos_cpp/: CMakeLists.txt
ros2_yolos_cpp/launch/: detector1.launch.py
ros2_yolos_cpp/src/adapters/: detector_adapter.cpp
